--- a/styles.css
+++ b/styles.css
@@ -196,4 +196,12 @@ body {
 }
 .ellipsis--song{
     margin-right: 10px;
+    border-radius:50%;
+    width: 17px;
+}
+.ellipsis--song i{
+    transition:font-size 0.1s;
+}
+.ellipsis--song:hover i{
+    font-size: 20px;
 }
