--- a/styles.css
+++ b/styles.css
@@ -198,10 +198,32 @@ body {
     margin-right: 10px;
     border-radius:50%;
     width: 17px;
+    position: relative;
 }
-.ellipsis--song i{
-    transition:font-size 0.1s;
+
+.modifier{
+    display: inline-block;
 }
-.ellipsis--song:hover i{
+.setting{
+    position: absolute;
+    top: -30px;
+    left: -90px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    width: 80px;
+    height: 70px;
+    background-color:cornsilk;
+    border-radius: 10px;
+    text-align: center;
+    padding:10px;
+    color:black;
+    display:none;
+}
+.setting--active{
+    display: block!important;
     font-size: 20px;
+
+}
+
+.ellipsis--song > i:hover{
+    opacity: 0.7;
 }
