--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,25 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    color: black;    
+    color: black;   
 }
 /*---------------------- css app base------------- */
-.main{
-    display:flex;
-    justify-content:center;
-    align-items:center;
+.container {
     height: 100vh;
     width: 100vw;
+    background-image: linear-gradient( to bottom, #c6426e, #642b73); 
+    overflow: hidden;
+    position: relative;
+}
+.main{
+    height:inherit;
+    width: inherit;
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+   
+  
+   
 }
 
 .music--app.playing .fa-play{
@@ -29,12 +39,121 @@ body {
 .music--app .fa-play{
     display:block;
 }
+
 .music--app{
+    animation: bottomGo 1s ease;
+}
+.volume-bar{
+    height: 95px;
+}
+.ico{
+    height:30px;
+    margin-bottom:-20px;
+    position:relative;
+    width:20px;
+
+}
+.ico i{
+    position:absolute;
+    z-index: 100;
+    bottom:5px;
+}
+.process-volume{
+    transform: rotate(-90deg);
+}
+.volume-feature{
+    cursor: pointer;
+    display:flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    align-items:center;
+    height:200px;
+    width:70px;
+    background-color:white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position:absolute;
+    z-index: 99;
+    right: 30px;
+    z-index: 0;
+    top:-180px;
+    padding:5px 0 5px 0;
+}
+.volume-animation-in{
+    animation: volumeTransIn 0.65s ease-in-out forwards;
+}
+.volume-animation-out{
+    animation: volumeTransOut 0.65s ease-in-out forwards;
+}
+.volume-feature::before{
+    content:"";
+    display:block;
+    width:70px;
+    height:70px;
+    background-color:white;
+    clip-path: ellipse(50% 40% at 50% 0%);
+    position:absolute;
+    top:200px;
+}
+.app{
     height:600px;
     width: 400px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius:15px;
     padding:10px 20px;
+    background-color: #fff;
+}
+.search-box{
+    width: 100%;
+    position: relative;
+    display: flex;
+    margin-top: 20px;
+  
+}
+.search-input{
+    width: 100%;
+    padding: 10px;
+    border: 4px solid #111d5e;
+    border-radius:10px 0 0 10px ;
+    border-right: none;
+    outline: none;
+    font-size: 18px;
+    color: #111d5e;
+    font-weight: bold;
+    background: none;
+}
+.search-button{
+    text-align: center;
+    height: 52px;
+    width: 40px;
+    outline: none;
+    cursor: pointer;
+    border: 4px solid #111d5e;
+    border-radius: 0 10px 10px 0 ;
+    border-left: none;
+    background: none;
+    font-size: 20px;
+    border-left: 4px solid #111d5e;
+}
+.stock-music{
+    margin-top:20px;
+    overflow-y:scroll;
+    padding: 0 10px 10px 10px;
+    cursor: pointer;
+}
+.store{
+    width: 600px !important;
+
+}
+.store__header{
+    text-align:center;
+}
+.header__name{
+    margin-top:5px;
+    margin-bottom: 10px;
+}
+.store__header span{
+    font-weight: bold ;
+    color: red;
 }
 .header{
     text-align:center;
@@ -42,10 +161,6 @@ body {
 .header span{
     color:red;
     font-weight:bold;
-}
-.header h2{
-    margin-top:5px;
-    margin-bottom: 10px;
 }
 .cd{
     height:150px;
@@ -121,23 +236,7 @@ body {
     background: red;
     cursor: pointer;
 }
-/* width */
-.playlist::-webkit-scrollbar {
-    width: 5px;
-    border-radius: 10px;
-}
-  
-/* Track */
-.playlist::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-    border-radius: 10px;
-}
-   
-  /* Handle */
-.playlist::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 10px; 
-}
+
 .playlist--song.active{
     background:red;
     border-radius:10px;
@@ -168,7 +267,7 @@ body {
     display: flex;
     align-items:center;
     justify-content:space-between;
-    transition: all 0.25s ;
+    transition: all 0.25s;
 }
 .playlist--song:first-child{
     margin-top:0 !important;
@@ -223,7 +322,55 @@ body {
     font-size: 20px;
 
 }
-
+.noneDisplay{
+    display: none!important;
+}
 .ellipsis--song > i:hover{
     opacity: 0.7;
+}
+.cre{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 12px;
+    font-weight: bold;
+    color:rgb(196, 244, 211);
+    cursor: default;
+}
+/* ------------------------------Keyframes---------------------------------- */
+@keyframes bottomGo{
+    0%{
+        transform:translateY(500px);
+    }
+}
+@keyframes volumeTransIn{
+    100%{
+        top: 0;
+    }
+}
+@keyframes volumeTransOut{
+    0%{
+        top:0px;
+    }
+    100%{
+        top:-180px;
+    }
+}
+/*-------------------------------------scroll bar----------------------------*/
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    border-radius: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px;
+}
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px; 
 }
