--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,16 @@ body {
     color:rgb(196, 244, 211);
     cursor: default;
 }
+.heart {
+    background: url("./assets/img/img.png") no-repeat;
+    background-position: left;
+    background-size: 2900%;
+    height: 70px;
+    width: 70px;
+}
+.heart.heart-active {
+  animation: animate 0.8s steps(28) 1 forwards;
+}
 /* ------------------------------Keyframes---------------------------------- */
 @keyframes bottomGo{
     0%{
@@ -357,6 +367,11 @@ body {
     }
     100%{
         top:-180px;
+    }
+}
+@keyframes animate {
+    100%{
+        background-position:right;
     }
 }
 /*-------------------------------------scroll bar----------------------------*/
